@@ -1,5 +1,7 @@
 New entries should be added at the top
 
+2005-02-05 Some superscript text optimizations for ticking log plots
+
 2005-02-05 Added some default key press events to pylab figures: 'g'
            toggles grid - JDH
 
